@@ -1,5 +1,5 @@
 /*
- * Copyright 2006-2020 The MZmine Development Team
+ * Copyright 2006-2021 The MZmine Development Team
  *
  * This file is part of MZmine.
  *
@@ -8,12 +8,12 @@
  * License, or (at your option) any later version.
  *
  * MZmine is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even
- * the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General
- * Public License for more details.
+ * the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
+ * General Public License for more details.
  *
  * You should have received a copy of the GNU General Public License along with MZmine; if not,
- * write to the Free Software Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301
- * USA
+ * write to the Free Software Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301 USA.
+ *
  */
 
 package io.github.mzmine.modules.dataprocessing.filter_groupms2;
@@ -21,35 +21,38 @@ package io.github.mzmine.modules.dataprocessing.filter_groupms2;
 import com.google.common.collect.Range;
 import io.github.mzmine.datamodel.FeatureStatus;
 import io.github.mzmine.datamodel.Frame;
-import io.github.mzmine.datamodel.ImsMsMsInfo;
+import io.github.mzmine.datamodel.IMSRawDataFile;
 import io.github.mzmine.datamodel.MZmineProject;
 import io.github.mzmine.datamodel.MergedMsMsSpectrum;
+import io.github.mzmine.datamodel.MobilityType;
 import io.github.mzmine.datamodel.RawDataFile;
 import io.github.mzmine.datamodel.Scan;
-import io.github.mzmine.datamodel.features.Feature;
 import io.github.mzmine.datamodel.features.FeatureList;
 import io.github.mzmine.datamodel.features.FeatureListRow;
 import io.github.mzmine.datamodel.features.ModularFeature;
 import io.github.mzmine.datamodel.features.ModularFeatureList;
-import io.github.mzmine.datamodel.features.ModularFeatureListRow;
 import io.github.mzmine.datamodel.features.SimpleFeatureListAppliedMethod;
-import io.github.mzmine.datamodel.features.types.ImsMsMsInfoType;
+import io.github.mzmine.datamodel.features.types.MsMsInfoType;
+import io.github.mzmine.datamodel.impl.MSnInfoImpl;
+import io.github.mzmine.datamodel.msms.DDAMsMsInfo;
+import io.github.mzmine.datamodel.msms.MsMsInfo;
+import io.github.mzmine.datamodel.msms.PasefMsMsInfo;
 import io.github.mzmine.parameters.ParameterSet;
 import io.github.mzmine.parameters.parametertypes.tolerances.MZTolerance;
 import io.github.mzmine.parameters.parametertypes.tolerances.RTTolerance;
 import io.github.mzmine.taskcontrol.AbstractTask;
 import io.github.mzmine.taskcontrol.TaskStatus;
-import io.github.mzmine.util.scans.ScanUtils;
+import io.github.mzmine.util.scans.FragmentScanSorter;
 import io.github.mzmine.util.scans.SpectraMerging;
 import io.github.mzmine.util.scans.SpectraMerging.MergingType;
+import java.time.Instant;
 import java.util.ArrayList;
-import java.util.Comparator;
 import java.util.List;
+import java.util.Objects;
 import java.util.logging.Level;
 import java.util.logging.Logger;
 import java.util.stream.Collectors;
-import javafx.collections.FXCollections;
-import javafx.collections.ObservableList;
+import org.jetbrains.annotations.NotNull;
 
 /**
  * Filters out feature list rows.
@@ -62,12 +65,15 @@ public class GroupMS2Task extends AbstractTask {
   private final MZmineProject project;
   // Parameters.
   private final ParameterSet parameters;
+  private final Double minMs2Intensity;
+  private final boolean combineTimsMS2;
   // Processed rows counter
   private int processedRows, totalRows;
   private FeatureList list;
   private RTTolerance rtTol;
   private MZTolerance mzTol;
   private boolean limitRTByFeature;
+  private boolean lockToFeatureMobilityRange;
 
   /**
    * Create the task.
@@ -76,8 +82,8 @@ public class GroupMS2Task extends AbstractTask {
    * @param parameterSet task parameters.
    */
   public GroupMS2Task(final MZmineProject project, final FeatureList list,
-      final ParameterSet parameterSet) {
-    super(null); // no new data stored -> null
+      final ParameterSet parameterSet, @NotNull Instant moduleCallDate) {
+    super(null, moduleCallDate); // no new data stored -> null
 
     // Initialize.
     this.project = project;
@@ -85,6 +91,12 @@ public class GroupMS2Task extends AbstractTask {
     rtTol = parameters.getParameter(GroupMS2Parameters.rtTol).getValue();
     mzTol = parameters.getParameter(GroupMS2Parameters.mzTol).getValue();
     limitRTByFeature = parameters.getParameter(GroupMS2Parameters.limitRTByFeature).getValue();
+    combineTimsMS2 = parameterSet.getParameter(GroupMS2Parameters.combineTimsMsMs).getValue();
+    lockToFeatureMobilityRange = parameterSet.getParameter(
+        GroupMS2Parameters.lockMS2ToFeatureMobilityRange).getValue();
+    minMs2Intensity = parameterSet.getParameter(GroupMS2Parameters.outputNoiseLevel).getValue()
+        ? parameterSet.getParameter(GroupMS2Parameters.outputNoiseLevel).getEmbeddedParameter()
+        .getValue() : null;
     this.list = list;
     processedRows = 0;
     totalRows = 0;
@@ -119,8 +131,9 @@ public class GroupMS2Task extends AbstractTask {
         processedRows++;
       }
 
-      list.getAppliedMethods().add(new SimpleFeatureListAppliedMethod(
-          GroupMS2Module.class, parameters));
+      list.getAppliedMethods().add(
+          new SimpleFeatureListAppliedMethod(GroupMS2Module.class, parameters,
+              getModuleCallDate()));
       setStatus(TaskStatus.FINISHED);
       logger.info("Finished adding all MS2 scans to their features in " + list.getName());
 
@@ -138,35 +151,40 @@ public class GroupMS2Task extends AbstractTask {
    * @param row
    */
   public void processRow(FeatureListRow row) {
-    for (Feature f : row.getFeatures()) {
-      if (f instanceof ModularFeature && ((ModularFeature) f).getMobilityUnit()
-          == io.github.mzmine.datamodel.MobilityType.TIMS) {
-        processTimsFeature((ModularFeature) f);
-      }
-      else if(!f.getFeatureStatus().equals(FeatureStatus.UNKNOWN)) {
+    for (ModularFeature f : row.getFeatures()) {
+      if (f != null && f.getFeatureStatus() != FeatureStatus.UNKNOWN && (
+          f.getMobilityUnit() == io.github.mzmine.datamodel.MobilityType.TIMS || (
+              f.getRawDataFile() instanceof IMSRawDataFile imsfile
+                  && imsfile.getMobilityType() == MobilityType.TIMS))) {
+        processTimsFeature(f);
+      } else if (f != null && !f.getFeatureStatus().equals(FeatureStatus.UNKNOWN)) {
         RawDataFile raw = f.getRawDataFile();
         float frt = f.getRT();
         double fmz = f.getMZ();
         Range<Float> rtRange = f.getRawDataPointsRTRange();
 
-        List<Scan> scans = ScanUtils.streamScans(raw, 2)
-            .filter(scan -> filterScan(scan, frt, fmz, rtRange)).collect(
-                Collectors.toList());
+        List<Scan> scans = raw.stream().filter(scan -> scan.getMSLevel() > 1)
+            .filter(scan -> filterScan(scan, frt, fmz, rtRange))
+            .sorted(FragmentScanSorter.DEFAULT_TIC).toList();
 
-        // set list to feature
-        f.setAllMS2FragmentScans(FXCollections.observableArrayList(scans));
-        f.setFragmentScan(
-            scans.stream().max(Comparator.comparingDouble(Scan::getTIC)).orElse(null));
+        // set list to feature and sort
+        f.setAllMS2FragmentScans(scans);
       }
     }
   }
 
-  private boolean filterScan(Scan scan, float frt, double fmz,
-      Range<Float> rtRange) {
-    return (!limitRTByFeature || rtRange.contains(scan.getRetentionTime()))
-        && rtTol.checkWithinTolerance(frt, scan.getRetentionTime())
-        && scan.getPrecursorMZ() != 0
-        && mzTol.checkWithinTolerance(fmz, scan.getPrecursorMZ());
+  private boolean filterScan(Scan scan, float frt, double fmz, Range<Float> featureRtRange) {
+    final double precursorMZ;
+    if (scan.getMsMsInfo() instanceof MSnInfoImpl msn) {
+      precursorMZ = msn.getMS2PrecursorMz();
+    } else if (scan.getMsMsInfo() instanceof DDAMsMsInfo info) {
+      precursorMZ = info.getIsolationMz();
+    } else {
+      precursorMZ = Objects.requireNonNullElse(scan.getPrecursorMz(), 0d);
+    }
+    return (!limitRTByFeature || featureRtRange.contains(scan.getRetentionTime()))
+           && rtTol.checkWithinTolerance(frt, scan.getRetentionTime()) && precursorMZ != 0
+           && mzTol.checkWithinTolerance(fmz, precursorMZ);
   }
 
   private void processTimsFeature(ModularFeature feature) {
@@ -176,27 +194,33 @@ public class GroupMS2Task extends AbstractTask {
     Range<Float> rtRange = feature.getRawDataPointsRTRange();
     Float mobility = feature.getMobility();
 
-    List<? extends Scan> scans = feature.getRawDataFile().getScans().stream()
-        .filter(scan -> rtTol.checkWithinTolerance(frt, scan.getRetentionTime())
-            && scan.getMSLevel() == 2).collect(Collectors.toList());
+    final List<? extends Scan> scans = feature.getRawDataFile().getScanNumbers(2).stream().filter(
+            scan -> (!limitRTByFeature && rtTol.checkWithinTolerance(frt, scan.getRetentionTime())) || (
+                limitRTByFeature && rtRange.contains(scan.getRetentionTime())))
+        .collect(Collectors.toList());
 
     if (scans.isEmpty() || !(scans.get(0) instanceof Frame)) {
       return;
     }
 
-    List<Frame> frames = (List<Frame>) scans;
-    List<ImsMsMsInfo> eligibleMsMsInfos = new ArrayList<>();
+    final List<Frame> frames = (List<Frame>) scans;
+    final List<MsMsInfo> eligibleMsMsInfos = new ArrayList<>();
     for (Frame frame : frames) {
       frame.getImsMsMsInfos().forEach(imsMsMsInfo -> {
-        if (mzTol.checkWithinTolerance(fmz, imsMsMsInfo.getLargestPeakMz())) {
-
-          // todo: maybe revisit this for a more sophisticated range check
-          int mobilityScannumberOffset = frame.getMobilityScan(0).getMobilityScanNumber();
-          float mobility1 = (float) frame.getMobilityForMobilityScanNumber(
-              imsMsMsInfo.getSpectrumNumberRange().lowerEndpoint() - mobilityScannumberOffset);
-          float mobility2 = (float) frame.getMobilityForMobilityScanNumber(
-              imsMsMsInfo.getSpectrumNumberRange().upperEndpoint() - mobilityScannumberOffset);
-          if (Range.singleton(mobility1).span(Range.singleton(mobility2)).contains(mobility)) {
+        if (mzTol.checkWithinTolerance(fmz, imsMsMsInfo.getIsolationMz())) {
+          // if we have a mobility (=processed by IMS workflow), we can check for the correct range during assignment.
+          if (mobility != null) {
+            // todo: maybe revisit this for a more sophisticated range check
+            int mobilityScannumberOffset = frame.getMobilityScan(0).getMobilityScanNumber();
+            float mobility1 = (float) frame.getMobilityForMobilityScanNumber(
+                imsMsMsInfo.getSpectrumNumberRange().lowerEndpoint() - mobilityScannumberOffset);
+            float mobility2 = (float) frame.getMobilityForMobilityScanNumber(
+                imsMsMsInfo.getSpectrumNumberRange().upperEndpoint() - mobilityScannumberOffset);
+            if (Range.singleton(mobility1).span(Range.singleton(mobility2)).contains(mobility)) {
+              eligibleMsMsInfos.add(imsMsMsInfo);
+            }
+          } else {
+            // if we don't have a mobility, we can simply add the msms info.
             eligibleMsMsInfos.add(imsMsMsInfo);
           }
         }
@@ -206,26 +230,30 @@ public class GroupMS2Task extends AbstractTask {
     if (eligibleMsMsInfos.isEmpty()) {
       return;
     }
-    feature.set(ImsMsMsInfoType.class, eligibleMsMsInfos);
+    feature.set(MsMsInfoType.class, eligibleMsMsInfos);
 
-    MZTolerance mergeTol = new MZTolerance(0.008, 25);
-    ObservableList<MergedMsMsSpectrum> msmsSpectra = FXCollections.observableArrayList();
-    for (ImsMsMsInfo info : eligibleMsMsInfos) {
-      MergedMsMsSpectrum spectrum = SpectraMerging
-          .getMergedMsMsSpectrumForPASEF(info, 1E1, mergeTol, MergingType.SUMMED,
-              ((ModularFeatureList) list).getMemoryMapStorage());
+    List<MergedMsMsSpectrum> msmsSpectra = new ArrayList<>();
+    for (MsMsInfo info : eligibleMsMsInfos) {
+      MergedMsMsSpectrum spectrum = SpectraMerging.getMergedMsMsSpectrumForPASEF(
+          (PasefMsMsInfo) info, SpectraMerging.pasefMS2MergeTol, MergingType.SUMMED,
+          ((ModularFeatureList) list).getMemoryMapStorage(),
+          lockToFeatureMobilityRange && feature.getMobilityRange() != null
+              ? feature.getMobilityRange() : null, minMs2Intensity);
       if (spectrum != null) {
         msmsSpectra.add(spectrum);
       }
     }
 
     if (!msmsSpectra.isEmpty()) {
-      feature.setAllMS2FragmentScans(
-          (ObservableList<Scan>) (ObservableList<? extends Scan>) msmsSpectra);
-      MergedMsMsSpectrum best = msmsSpectra.stream()
-          .max(Comparator.comparingDouble(MergedMsMsSpectrum::getTIC)).orElse(null);
-      feature.setFragmentScan(best);
-    }
+      if (combineTimsMS2) {
+        List<Scan> sameCEMerged = SpectraMerging.mergeMsMsSpectra(msmsSpectra,
+            SpectraMerging.pasefMS2MergeTol, MergingType.SUMMED,
+            ((ModularFeatureList) list).getMemoryMapStorage());
+        feature.setAllMS2FragmentScans(sameCEMerged, true);
 
+      } else {
+        feature.setAllMS2FragmentScans((List<Scan>) (List<? extends Scan>) msmsSpectra, true);
+      }
+    }
   }
 }
