@@ -1,5 +1,5 @@
 /*
- * Copyright 2006-2020 The MZmine Development Team
+ * Copyright 2006-2021 The MZmine Development Team
  *
  * This file is part of MZmine.
  *
@@ -8,12 +8,12 @@
  * License, or (at your option) any later version.
  *
  * MZmine is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even
- * the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General
- * Public License for more details.
+ * the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
+ * General Public License for more details.
  *
  * You should have received a copy of the GNU General Public License along with MZmine; if not,
- * write to the Free Software Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301
- * USA
+ * write to the Free Software Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301 USA.
+ *
  */
 
 package io.github.mzmine.modules.io.projectload.version_2_5;
@@ -23,15 +23,12 @@ import java.io.InputStream;
 import java.util.ArrayList;
 import java.util.Hashtable;
 import java.util.logging.Logger;
-
 import javax.xml.parsers.ParserConfigurationException;
 import javax.xml.parsers.SAXParser;
 import javax.xml.parsers.SAXParserFactory;
-
 import org.xml.sax.Attributes;
 import org.xml.sax.SAXException;
 import org.xml.sax.helpers.DefaultHandler;
-
 import io.github.mzmine.datamodel.MZmineProject;
 import io.github.mzmine.datamodel.RawDataFile;
 import io.github.mzmine.modules.io.projectload.UserParameterOpenHandler;
@@ -70,6 +67,7 @@ public class UserParameterOpenHandler_2_5 extends DefaultHandler
   /**
    * Load the user parameters
    */
+  @Override
   public void readUserParameters(InputStream inputStream)
       throws IOException, ParserConfigurationException, SAXException {
 
@@ -86,12 +84,14 @@ public class UserParameterOpenHandler_2_5 extends DefaultHandler
   /**
    * @return the progress of these functions loading the feature list from the zip file.
    */
+  @Override
   public double getProgress() {
     if (totalParams == 0)
       return 0;
     return (double) parsedParams / totalParams;
   }
 
+  @Override
   public void cancel() {
     canceled = true;
   }
@@ -100,6 +100,7 @@ public class UserParameterOpenHandler_2_5 extends DefaultHandler
    * @see org.xml.sax.helpers.DefaultHandler#startElement(java.lang.String, java.lang.String,
    *      java.lang.String, org.xml.sax.Attributes)
    */
+  @Override
   public void startElement(String namespaceURI, String lName, String qName, Attributes attrs)
       throws SAXException {
 
@@ -146,6 +147,7 @@ public class UserParameterOpenHandler_2_5 extends DefaultHandler
    * @see org.xml.sax.helpers.DefaultHandler#endElement(java.lang.String, java.lang.String,
    *      java.lang.String)
    */
+  @Override
   @SuppressWarnings("unchecked")
   public void endElement(String namespaceURI, String sName, String qName) throws SAXException {
 
@@ -164,7 +166,7 @@ public class UserParameterOpenHandler_2_5 extends DefaultHandler
       String valueString = getTextOfElement();
       Object value;
       if (currentParameter instanceof DoubleParameter) {
-        value = new Double(valueString);
+        value = Double.valueOf(valueString);
       } else
         value = valueString;
       currentValues.put(currentDataFile, value);
@@ -191,7 +193,7 @@ public class UserParameterOpenHandler_2_5 extends DefaultHandler
 
   /**
    * Return a string without tab an EOF characters
-   * 
+   *
    * @return String element text
    */
   private String getTextOfElement() {
@@ -204,9 +206,10 @@ public class UserParameterOpenHandler_2_5 extends DefaultHandler
 
   /**
    * characters()
-   * 
+   *
    * @see org.xml.sax.ContentHandler#characters(char[], int, int)
    */
+  @Override
   public void characters(char buf[], int offset, int len) throws SAXException {
     charBuffer = charBuffer.append(buf, offset, len);
   }
