@@ -1,5 +1,5 @@
 /*
- * Copyright 2006-2020 The MZmine Development Team
+ * Copyright 2006-2021 The MZmine Development Team
  *
  * This file is part of MZmine.
  *
@@ -8,12 +8,12 @@
  * License, or (at your option) any later version.
  *
  * MZmine is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even
- * the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General
- * Public License for more details.
+ * the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
+ * General Public License for more details.
  *
  * You should have received a copy of the GNU General Public License along with MZmine; if not,
- * write to the Free Software Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301
- * USA
+ * write to the Free Software Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301 USA.
+ *
  */
 
 package io.github.mzmine.modules.visualization.spectra.spectralmatchresults;
@@ -24,29 +24,27 @@ import io.github.mzmine.parameters.ParameterSet;
 import io.github.mzmine.util.spectraldb.entry.SpectralDBFeatureIdentity;
 import java.util.List;
 import java.util.stream.Collectors;
-import javax.annotation.Nonnull;
-import javax.annotation.Nullable;
+import org.jetbrains.annotations.NotNull;
+import org.jetbrains.annotations.Nullable;
 
 public class SpectraIdentificationResultsModule implements MZmineModule {
 
-  public static final String MODULE_NAME = "Local spectral database search results";
+  public static final String MODULE_NAME = "Local spectral libraries search results";
 
-  public static void showNewTab(ModularFeatureListRow row) {
+  public static void showNewTab(List<ModularFeatureListRow> rows) {
     List<SpectralDBFeatureIdentity> spectralID =
-        row.getPeakIdentities().stream()
-            .filter(pi -> pi instanceof SpectralDBFeatureIdentity)
-            .map(pi -> ((SpectralDBFeatureIdentity) pi)).collect(Collectors.toList());
+        rows.stream().flatMap(row -> row.getSpectralLibraryMatches().stream()).toList();
     if (!spectralID.isEmpty()) {
       SpectraIdentificationResultsWindowFX window = new SpectraIdentificationResultsWindowFX();
       window.addMatches(spectralID);
-      window.setTitle("Matched " + spectralID.size() + " compounds for feature list row"
-          + row.getID());
+      window.setTitle("Matched " + spectralID.size() + " compounds for feature list rows "
+          + rows.stream().map(row -> String.valueOf(row.getID())).collect(Collectors.joining(", ")));
       window.show();
     }
   }
 
   @Override
-  public @Nonnull
+  public @NotNull
   String getName() {
     return MODULE_NAME;
   }
