@@ -1,5 +1,5 @@
 /*
- * Copyright 2006-2020 The MZmine Development Team
+ * Copyright 2006-2021 The MZmine Development Team
  *
  * This file is part of MZmine.
  *
@@ -8,12 +8,12 @@
  * License, or (at your option) any later version.
  *
  * MZmine is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even
- * the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General
- * Public License for more details.
+ * the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
+ * General Public License for more details.
  *
  * You should have received a copy of the GNU General Public License along with MZmine; if not,
- * write to the Free Software Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301
- * USA
+ * write to the Free Software Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301 USA.
+ *
  */
 
 package io.github.mzmine.project.impl;
@@ -21,25 +21,22 @@ package io.github.mzmine.project.impl;
 import com.google.common.collect.Range;
 import io.github.mzmine.datamodel.Frame;
 import io.github.mzmine.datamodel.IMSRawDataFile;
-import io.github.mzmine.datamodel.MobilityScan;
 import io.github.mzmine.datamodel.MobilityType;
 import io.github.mzmine.datamodel.Scan;
+import io.github.mzmine.modules.dataprocessing.id_ccscalibration.CCSCalibration;
 import io.github.mzmine.util.MemoryMapStorage;
+import it.unimi.dsi.fastutil.doubles.DoubleImmutableList;
 import java.io.IOException;
-import java.util.Collection;
+import java.util.ArrayList;
 import java.util.Comparator;
-import java.util.HashMap;
-import java.util.HashSet;
 import java.util.Hashtable;
 import java.util.List;
-import java.util.Map;
-import java.util.Set;
 import java.util.logging.Logger;
 import java.util.stream.Collectors;
 import javafx.collections.FXCollections;
 import javafx.scene.paint.Color;
-import javax.annotation.Nonnull;
-import javax.annotation.Nullable;
+import org.jetbrains.annotations.NotNull;
+import org.jetbrains.annotations.Nullable;
 
 /**
  * @author https://github.com/SteffenHeu
@@ -51,41 +48,34 @@ public class IMSRawDataFileImpl extends RawDataFileImpl implements IMSRawDataFil
   private static Logger logger = Logger.getLogger(IMSRawDataFileImpl.class.getName());
 
   private final List<Frame> frames = FXCollections.observableArrayList();
-  private final Hashtable<Integer, Set<Scan>> frameNumbersCache;
+  private final Hashtable<Integer, List<Scan>> frameNumbersCache;
   private final Hashtable<Integer, Range<Double>> dataMobilityRangeCache;
-  private final Hashtable<Integer, Collection<? extends Frame>> frameMsLevelCache;
-
-  /**
-   * Mobility <-> sub spectrum number is the same for a segment but might change between segments!
-   * Key = Range of Frame numbers in a segment (inclusive) Value = Mapping of sub spectrum number ->
-   * mobility
-   */
-  private final Map<Range<Integer>, Map<Integer, Double>> segmentMobilityRange;
+  private final Hashtable<Integer, List<Frame>> frameMsLevelCache;
+  private final List<DoubleImmutableList> mobilitySegments = new ArrayList<>();
 
   protected Range<Double> mobilityRange;
   protected MobilityType mobilityType;
+  protected CCSCalibration ccsCalibration = null;
 
-  public IMSRawDataFileImpl(String dataFileName, MemoryMapStorage storage) throws IOException {
-    super(dataFileName, storage);
+  public IMSRawDataFileImpl(String dataFileName, @Nullable final String absolutePath,
+      MemoryMapStorage storage) {
+    super(dataFileName, absolutePath, storage);
 
     frameNumbersCache = new Hashtable<>();
     dataMobilityRangeCache = new Hashtable<>();
     frameMsLevelCache = new Hashtable<>();
-    segmentMobilityRange = new HashMap<>();
 
     mobilityRange = null;
     mobilityType = MobilityType.NONE;
-
   }
 
-  public IMSRawDataFileImpl(String dataFileName, MemoryMapStorage storage, Color color)
-      throws IOException {
-    super(dataFileName, storage, color);
+  public IMSRawDataFileImpl(String dataFileName, @Nullable final String absolutePath,
+      MemoryMapStorage storage, Color color) {
+    super(dataFileName, absolutePath, storage, color);
 
     frameNumbersCache = new Hashtable<>();
     dataMobilityRangeCache = new Hashtable<>();
     frameMsLevelCache = new Hashtable<>();
-    segmentMobilityRange = new HashMap<>();
 
     mobilityRange = null;
     mobilityType = MobilityType.NONE;
@@ -122,17 +112,17 @@ public class IMSRawDataFileImpl extends RawDataFileImpl implements IMSRawDataFil
      */
   }
 
-  @Nonnull
+  @NotNull
   @Override
-  public Collection<Frame> getFrames() {
+  public List<Frame> getFrames() {
     return frames;
   }
 
-  @Nonnull
+  @NotNull
   @Override
-  public Collection<? extends Frame> getFrames(int msLevel) {
-    return frameMsLevelCache.computeIfAbsent(msLevel, level -> getFrames().stream()
-        .filter(frame -> frame.getMSLevel() == msLevel).collect(Collectors.toSet()));
+  public List<Frame> getFrames(int msLevel) {
+    return frameMsLevelCache.computeIfAbsent(msLevel,
+        level -> getFrames().stream().filter(frame -> frame.getMSLevel() == msLevel).toList());
   }
 
   @Nullable
@@ -142,17 +132,17 @@ public class IMSRawDataFileImpl extends RawDataFileImpl implements IMSRawDataFil
   }
 
   @Override
-  @Nonnull
+  @NotNull
   public List<Frame> getFrames(int msLevel, Range<Float> rtRange) {
     return getFrames(msLevel).stream().filter(frame -> rtRange.contains(frame.getRetentionTime()))
-        .collect(Collectors.toList());
+        .toList();
   }
 
-  @Nonnull
+  @NotNull
   @Override
-  public Set<Scan> getFrameNumbers(int msLevel) {
+  public List<Scan> getFrameNumbers(int msLevel) {
     return frameNumbersCache.computeIfAbsent(msLevel, (key) -> {
-      Set<Scan> frameNums = new HashSet<>();
+      List<Scan> frameNums = new ArrayList<>();
       synchronized (frames) {
         for (Scan e : frames) {
           if (e.getMSLevel() == msLevel) {
@@ -169,16 +159,15 @@ public class IMSRawDataFileImpl extends RawDataFileImpl implements IMSRawDataFil
     return frames.size();
   }
 
-  @Nonnull
+  @NotNull
   @Override
-  public Set<Scan> getFrameNumbers(int msLevel, @Nonnull Range<Float> rtRange) {
+  public List<Scan> getFrameNumbers(int msLevel, @NotNull Range<Float> rtRange) {
     // since {@link getFrameNumbers(int)} is prefiltered, this shouldn't lead to NPE
     return getFrameNumbers(msLevel).stream()
-        .filter(frameNum -> rtRange.contains(frameNum.getRetentionTime()))
-        .collect(Collectors.toSet());
+        .filter(frameNum -> rtRange.contains(frameNum.getRetentionTime())).toList();
   }
 
-  @Nonnull
+  @NotNull
   @Override
   public Range<Double> getDataMobilityRange() {
     mobilityRange = dataMobilityRangeCache.computeIfAbsent(0, level -> {
@@ -243,13 +232,13 @@ public class IMSRawDataFileImpl extends RawDataFileImpl implements IMSRawDataFil
     return null;
   }
 
-  @Nonnull
+  @NotNull
   @Override
   public MobilityType getMobilityType() {
     return mobilityType;
   }
 
-  @Nonnull
+  @NotNull
   @Override
   public Range<Double> getDataMobilityRange(int msLevel) {
     if (dataMobilityRangeCache.get(msLevel) == null) {
@@ -271,44 +260,6 @@ public class IMSRawDataFileImpl extends RawDataFileImpl implements IMSRawDataFil
   }
 
   /**
-   * @param frameRange The range (in frame ids) for an acquisition segment.
-   */
-  public void addSegment(Range<Integer> frameRange) {
-    segmentMobilityRange.put(frameRange, null);
-  }
-
-  /**
-   * @param frameNumber The frame number
-   * @param mobilitySpectrumNumber The mobility spectrum number with regard to the frame.
-   * @return The mobility for the respective scan or {@link MobilityScan#DEFAULT_MOBILITY}.
-   */
-  /*@Override
-  public double getMobilityForMobilitySpectrum(int frameNumber, int mobilitySpectrumNumber) {
-    Map<Integer, Double> mobilities = getMobilitiesForFrame(frameNumber);
-    if (mobilities != null) {
-      return mobilities.getOrDefault(mobilitySpectrumNumber, MobilityScan.DEFAULT_MOBILITY);
-    }
-    return MobilityScan.DEFAULT_MOBILITY;
-  }*/
-
-  /**
-   * @param frameNumber The frame number.
-   * @return Map of mobility scan number <-> mobility or null for invalid frame numbers.
-   */
-  @Nullable
-  /*@Override
-  public Map<Integer, Double> getMobilitiesForFrame(int frameNumber) {
-    Optional<Entry<Range<Integer>, Map<Integer, Double>>> entry = segmentMobilityRange.entrySet()
-        .stream().filter(e -> e.getKey().contains(frameNumber)).findFirst();
-    return entry.map(Entry::getValue).orElse(null);
-  }*/
-
-  private Range<Integer> getSegmentKeyForFrame(int frameId) {
-    return segmentMobilityRange.keySet().stream()
-        .filter(segmentRange -> segmentRange.contains(frameId)).findFirst().get();
-  }
-
-  /**
    * Method to check if the proposed number of datapoints exceeds the current max number of
    * datapoints. Used in case the data points of a frame are altered. E.g. when a MZML IMS file is
    * imported. At that point, no summed frame is available and will have to be created later on.
@@ -321,4 +272,46 @@ public class IMSRawDataFileImpl extends RawDataFileImpl implements IMSRawDataFil
     }
   }
 
+  @Override
+  public @Nullable CCSCalibration getCCSCalibration() {
+    return ccsCalibration;
+  }
+
+  @Override
+  public void setCCSCalibration(@Nullable CCSCalibration calibration) {
+    ccsCalibration = calibration;
+  }
+
+  @Override
+  public int addMobilityValues(double[] mobilities) {
+    for (int i = 0; i < mobilitySegments.size(); i++) {
+      var mobilitySegment = mobilitySegments.get(i);
+      if (mobilitySegment.size() != mobilities.length) {
+        continue;
+      }
+      boolean equals = true;
+      for (int j = 0; j < mobilitySegment.size(); j++) {
+        if (Double.compare(mobilitySegment.getDouble(j), mobilities[j]) != 0) {
+          equals = false;
+          break;
+        }
+      }
+      if (equals) {
+        return i;
+      }
+    }
+    mobilitySegments.add(new DoubleImmutableList(mobilities));
+    if (mobilitySegments.size() > 10) {
+      logger.finest(
+          () -> "Registered " + mobilitySegments.size() + " mobility segments in file " + getName()
+              + ".");
+    }
+    return mobilitySegments.size() - 1;
+  }
+
+  @Override
+  public DoubleImmutableList getSegmentMobilities(int segment) {
+    assert segment < mobilitySegments.size();
+    return mobilitySegments.get(segment);
+  }
 }
